--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <button class="profile__add-button"></button>
         </section>
-        <section class="photos">
+        <section aria-label="Фотографии" class="photos">
             <article class="photo-card">
                 <img class="photo-card__image" src="./images/sochi.jpg" alt="">
                 <div class="photo-card__bottom-container">
