Исправления после ревью

--- a/index.html
+++ b/index.html
@@ -12,61 +12,60 @@
 <body class="root">
     <header class="header">
         <img class="header__logo" src="./images/logo.svg" alt="Логотип Место">
-        <div class="header__line"></div>
     </header>
     <main class="content">
         <section class="profile">
             <img class="profile__picture" src="./images/profile-picture.jpg" alt="Фотография профиля">
             <div class="profile__info">
-                <div class="profile__top-container">
+                <div class="profile__name-wrapper">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"></button>
+                    <button type="button" class="profile__edit-button"></button>
                 </div>
                 <p class="profile__description">Исследователь океана</p>
             </div>
-            <button class="profile__add-button"></button>
+            <button type="button" class="profile__add-button"></button>
         </section>
         <section aria-label="Фотографии" class="photos">
             <article class="photo-card">
-                <img class="photo-card__image" src="./images/sochi.jpg" alt="">
-                <div class="photo-card__bottom-container">
+                <img class="photo-card__image" src="./images/sochi.jpg" alt="Сочи">
+                <div class="photo-card__info">
                     <h2 class="photo-card__title">Сочи</h2>
-                    <button class="photo-card__like-button"></button>
+                    <button type="submit" class="photo-card__like-button"></button>
                 </div>
             </article>
             <article class="photo-card">
-                <img class="photo-card__image" src="./images/saint-petersburg.jpg" alt="">
-                <div class="photo-card__bottom-container">
+                <img class="photo-card__image" src="./images/saint-petersburg.jpg" alt="Санкт-Петербург">
+                <div class="photo-card__info">
                     <h2 class="photo-card__title">Санкт-Петербург</h2>
-                    <button class="photo-card__like-button"></button>
+                    <button type="submit" class="photo-card__like-button"></button>
                 </div>
             </article>
             <article class="photo-card">
-                <img class="photo-card__image" src="./images/sortavala.jpg" alt="">
-                <div class="photo-card__bottom-container">
+                <img class="photo-card__image" src="./images/sortavala.jpg" alt="Сортавала">
+                <div class="photo-card__info">
                     <h2 class="photo-card__title">Сортавала</h2>
-                    <button class="photo-card__like-button"></button>
+                    <button type="submit" class="photo-card__like-button"></button>
                 </div>
             </article>
             <article class="photo-card">
-                <img class="photo-card__image" src="./images/petrozavodks.jpg" alt="">
-                <div class="photo-card__bottom-container">
+                <img class="photo-card__image" src="./images/petrozavodks.jpg" alt="Петрозаводск">
+                <div class="photo-card__info">
                     <h2 class="photo-card__title">Петрозаводск</h2>
-                    <button class="photo-card__like-button"></button>
+                    <button type="submit" class="photo-card__like-button"></button>
                 </div>
             </article>
             <article class="photo-card">
-                <img class="photo-card__image" src="./images/moscow.jpg" alt="">
-                <div class="photo-card__bottom-container">
+                <img class="photo-card__image" src="./images/moscow.jpg" alt="Москва">
+                <div class="photo-card__info">
                     <h2 class="photo-card__title">Москва</h2>
-                    <button class="photo-card__like-button"></button>
+                    <button type="submit" class="photo-card__like-button"></button>
                 </div>
             </article>
             <article class="photo-card">
-                <img class="photo-card__image" src="./images/nikola-lenivets.jpg" alt="">
-                <div class="photo-card__bottom-container">
+                <img class="photo-card__image" src="./images/nikola-lenivets.jpg" alt="Никола-Ленивец">
+                <div class="photo-card__info">
                     <h2 class="photo-card__title">Никола-Ленивец</h2>
-                    <button class="photo-card__like-button"></button>
+                    <button type="submit" class="photo-card__like-button"></button>
                 </div>
             </article>
         </section>
@@ -74,18 +73,20 @@
     <footer class="footer">
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
-    <div class="popup ">
-        <form class="popup__container">
-            <fieldset class="popup__input-container">
-                <h2 class="popup__heading">Редактировать профиль</h2>
-                <input class="popup__item popup__item_element_text" type="text" value="Жак-Ив Кусто">
-                <div class="popup__line"></div>
-                <input class="popup__item popup__item_element_text" type="text" value="Исследователь океана">
-                <div class="popup__line"></div>
-                <input class="popup__item popup__item_element_submit" type="submit" value="Сохранить">
-            </fieldset>
-            <button class="popup__close"></button>
-        </form>
+    <div class="popup">
+        <div class="popup__container">
+            <form name="edit-form">
+                <fieldset class="popup__input-container">
+                    <h2 class="popup__heading">Редактировать профиль</h2>
+                    <div>
+                        <input class="popup__item popup__item_element_text" type="text" value="Жак-Ив Кусто">
+                        <input class="popup__item popup__item_element_text" type="text" value="Исследователь океана">
+                    </div>
+                    <input class="popup__submit" type="submit" value="Сохранить">
+                </fieldset>
+            </form>
+            <button type="button" class="popup__close"></button>
+        </div>
     </div>
 </body>
 
