--- a/index.html
+++ b/index.html
@@ -19,75 +19,69 @@
             <div class="profile__info">
                 <div class="profile__name-wrapper">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button type="button" class="profile__edit-button" aria-label="Изменить"></button>
+                    <button id="editButton" type="button" class="profile__edit-button" aria-label="Изменить"></button>
                 </div>
-                <p class="profile__description">Исследователь океана</p>
+                <p class="profile__description">Исследователь text</p>
             </div>
-            <button type="button" class="profile__add-button" aria-label="Добавить"></button>
+            <button id="addButton" type="button" class="profile__add-button" aria-label="Добавить"></button>
         </section>
         <section aria-label="Фотографии" class="photos">
-            <article class="photo-card">
-                <img class="photo-card__image" src="./images/sochi.jpg" alt="Сочи">
-                <div class="photo-card__info">
-                    <h2 class="photo-card__title">Сочи</h2>
-                    <button type="button" class="photo-card__like-button" aria-label="Лайк"></button>
-                </div>
-            </article>
-            <article class="photo-card">
-                <img class="photo-card__image" src="./images/saint-petersburg.jpg" alt="Санкт-Петербург">
-                <div class="photo-card__info">
-                    <h2 class="photo-card__title">Санкт-Петербург</h2>
-                    <button type="button" class="photo-card__like-button" aria-label="Лайк"></button>
-                </div>
-            </article>
-            <article class="photo-card">
-                <img class="photo-card__image" src="./images/sortavala.jpg" alt="Сортавала">
-                <div class="photo-card__info">
-                    <h2 class="photo-card__title">Сортавала</h2>
-                    <button type="button" class="photo-card__like-button" aria-label="Лайк"></button>
-                </div>
-            </article>
-            <article class="photo-card">
-                <img class="photo-card__image" src="./images/petrozavodks.jpg" alt="Петрозаводск">
-                <div class="photo-card__info">
-                    <h2 class="photo-card__title">Петрозаводск</h2>
-                    <button type="button" class="photo-card__like-button" aria-label="Лайк"></button>
-                </div>
-            </article>
-            <article class="photo-card">
-                <img class="photo-card__image" src="./images/moscow.jpg" alt="Москва">
-                <div class="photo-card__info">
-                    <h2 class="photo-card__title">Москва</h2>
-                    <button type="button" class="photo-card__like-button" aria-label="Лайк"></button>
-                </div>
-            </article>
-            <article class="photo-card">
-                <img class="photo-card__image" src="./images/nikola-lenivets.jpg" alt="Никола-Ленивец">
-                <div class="photo-card__info">
-                    <h2 class="photo-card__title">Никола-Ленивец</h2>
-                    <button type="button" class="photo-card__like-button" aria-label="Лайк"></button>
-                </div>
-            </article>
+            
         </section>
     </main>
     <footer class="footer">
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup popup_form_edit">
         <div class="popup__container">
-            <form name="edit-form">
+            <form id='editForm' name="edit-form">
                 <fieldset class="popup__input-container">
                     <h2 class="popup__heading">Редактировать профиль</h2>
                     <div>
-                        <input class="popup__item popup__item_element_text" name="name" type="text" value="Жак-Ив Кусто">
-                        <input class="popup__item popup__item_element_text" name="description" type="text" value="Исследователь океана">
+                        <input id='nameInput' class="popup__item popup__item_element_text" name="name" type="text" value="">
+                        <input id='jobInput' class="popup__item popup__item_element_text" name="description" type="text" value="">
                     </div>
-                    <input class="popup__submit" name="save-button" type="submit" value="Сохранить">
+                    <input id="saveButton" class="popup__submit" name="save-button" type="submit" value="Сохранить">
                 </fieldset>
             </form>
             <button type="button" class="popup__close" aria-label="Закрыть"></button>
         </div>
     </div>
+    <div class="popup popup_form_add">
+        <div class="popup__container">
+            <form id='addForm' name="add-form">
+                <fieldset class="popup__input-container">
+                    <h2 class="popup__heading">Новое место</h2>
+                    <div>
+                        <input id='titleInput' class="popup__item popup__item_element_text" name="title" type="text" placeholder="Название" value="">
+                        <input id='linkInput' class="popup__item popup__item_element_text" name="link" type="text" placeholder="Ссылка на картинку" value="">
+                    </div>
+                    <input id='createButton' class="popup__submit" name="create-button" type="submit" value="Создать">
+                </fieldset>
+            </form>
+            <button type="button" class="popup__close" aria-label="Закрыть"></button>
+        </div>
+    </div>
+    <div class="popup popup_form_photo">
+        <div class="popup__container popup__container_form_photo formPhotoContainer">
+            <form id='addForm' name="add-form">
+                <img class ='formPhotoContainer__image' src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="">
+                <p class='formPhotoContainer__caption'>test</p>
+            </form>
+            <button type="button" class="popup__close" aria-label="Закрыть"></button>
+        </div>
+    </div>
+    <template id="photoCardTemplate">
+        <article class="photo-card">
+            <img class="photo-card__image" src="" alt="">
+            <button type="button" class="photo-card__delete-button" aria-label="Удалить"></button>
+            <div class="photo-card__info">
+                <h2 class="photo-card__title"></h2>
+                <button type="button" class="photo-card__like-button" aria-label="Лайк"></button>
+            </div>
+        </article>
+    </template>
+    <script src="./script.js"></script>
 </body>
 
 </html>
