Поправки после ревью

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <button id="editButton" type="button" class="profile__edit-button" aria-label="Изменить"></button>
                 </div>
-                <p class="profile__description">Исследователь text</p>
+                <p class="profile__description">Исследователь океана</p>
             </div>
             <button id="addButton" type="button" class="profile__add-button" aria-label="Добавить"></button>
         </section>
@@ -66,7 +66,7 @@
         <div class="popup__container popup__container_form_photo formPhotoContainer">
             <form id='addForm' name="add-form">
                 <img class ='formPhotoContainer__image' src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="">
-                <p class='formPhotoContainer__caption'>test</p>
+                <p class='formPhotoContainer__caption'></p>
             </form>
             <button type="button" class="popup__close" aria-label="Закрыть"></button>
         </div>
