--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
                 <fieldset class="popup__input-container">
                     <h2 class="popup__heading">Редактировать профиль</h2>
                     <div>
-                        <input id='nameInput' class="popup__item popup__item_element_text" name="name" type="text" value="" minlength="2" maxlength="40" pattern="^[А-Яа-яa-zA-Z\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+                        <input id='nameInput' class="popup__item popup__item_element_text" name="name" type="text" value="" placeholder="Имя" minlength="2" maxlength="40" pattern="^[А-Яа-яa-zA-Z\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
                         <span class="popup__input-error nameInput-error"></span>
-                        <input id='jobInput' class="popup__item popup__item_element_text" name="description" type="text" value="" minlength="2" maxlength="400" pattern="^[А-Яа-яa-zA-Z\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+                        <input id='jobInput' class="popup__item popup__item_element_text" name="description" type="text" value="" placeholder="О себе" minlength="2" maxlength="400" pattern="^[А-Яа-яa-zA-Z\-\s]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
                         <span class="popup__input-error jobInput-error"></span>
                     </div>
                     <input id="saveButton" class="popup__submit" name="save-button" type="submit" value="Сохранить">
