--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     </footer>
     <div class="popup popup_form_edit">
         <div class="popup__container">
-            <form class="form" id='editForm' name="edit-form">
+            <form class="form" id='editForm' name="editForm">
                 <fieldset class="popup__input-container">
                     <h2 class="popup__heading">Редактировать профиль</h2>
                     <div>
@@ -50,7 +50,7 @@
     </div>
     <div class="popup popup_form_add">
         <div class="popup__container">
-            <form class="form" id='addForm' name="add-form">
+            <form class="form" id='addForm' name="addForm">
                 <fieldset class="popup__input-container">
                     <h2 class="popup__heading">Новое место</h2>
                     <div>
@@ -59,7 +59,7 @@
                         <input id='linkInput' class="popup__item popup__item_element_text" name="link" type="url" placeholder="Ссылка на картинку" value="" required>
                         <span class="popup__input-error linkInput-error"></span>
                     </div>
-                    <input id='createButton' class="popup__submit" name="create-button" type="submit" value="Создать">
+                    <input id='createButton' class="popup__submit" name="createButton" type="submit" value="Создать">
                 </fieldset>
             </form>
             <button type="button" class="popup__close" aria-label="Закрыть"></button>
